Unreleased
===============================
 * Improve metadata selection
 * Move OSD further down in the screen area (one line)
 * Disable while viewing pictures by default
 * Match autohide delay for 'status osd' with 'metadata-osd'
 * Use pre-processed templates for OSD messages
 * Remove newline characters from string during truncate
 * Don't show album's track number by default
 * Add styling config options
 * Truncate strings on UTF-8 encoded characters (in Linux)

metadata-osd-0.4.1 / 2022-10-02
===============================
 * fix: Add missing check for year metadata pattern extraction

metadata-osd-0.4.0 / 2022-09-24
===============================
 * Tune metadata processing:
     - Cut out and show just the year (not the full date, if present)
     - Support more possible keys for <artist> metadata, namely:
         - 'album_artist'
         - 'composer'
     - Show album's track if not equal to playlist's track
       (playlists can be long and traversing multiple directories)

metadata-osd-0.3.0 / 2022-08-31
===============================
 * Added: Config option to disable OSD-2

metadata-osd-0.2.0 / 2022-08-20
===============================
 * Added: Media-type related config options:
     enable_for_audio
     enable_for_audio_withalbumart
     enable_for_video
     enable_for_image
     autohide_for_audio
     autohide_for_audio_withalbumart
     autohide_for_video
     autohide_for_image

 * Removed: Autohide auto-decide config option:
     key_toggleautohide_autodecide

 * Changed: Minus character to underscore change
     in both script name and config file name.
     Existing configuration file with minus character
     will still work (for now).

metadata-osd-0.1.0 / 2022-06-18
===============================
 * Initial release