@@ -31,10 +31,14 @@
 #-- OSD autohide enable / disable switch key
 #key_toggleautohide=F5
 
-#-- Show / hide OSD-1 switch key (current autohide state applies)
+#-- Show / hide OSD-1 switch key
+#--   - current autohide state applies
 #key_toggleosd_1=
 
-#-- Show / hide OSD-2 switch key (current autohide state applies)
+#-- Show / hide OSD-2 switch key
+#--   - current autohide state applies
+#--   - OSD-2 needs to be enabled in 'enable_osd_2' config option
+#--   - OSD-2 needs to have data
 #key_toggleosd_2=
 
 #-- Reset user-toggled switches
